--- a/actividad2/index.html
+++ b/actividad2/index.html
@@ -39,18 +39,18 @@
                     -h2
                     -span
                  -->
-                <p class="p-logo">looking for<span class="span-logo">freedom</span> </p>
+                <p class="p-logo">looking for <span class="span-logo">freedom</span> </p>
             </a>
 
         </div>
 
         <!------- LISTA -> MENÚ DE NAVEGACIÓN ------->
         <ul class="listaMenu">
-            <li><a href="#"></a>inicio</li>
-            <li><a href="#"></a>proyecto</li>
-            <li><a href="#"></a>sobre nosotros</li>
-            <li><a href="#"></a>aliados</li>
-            <li><a href="#"></a>contactanos</li>
+            <li><a href="#">inicio</a></li>
+            <li><a href="#">proyecto</a></li>
+            <li><a href="#">sobre nosotros</a></li>
+            <li><a href="#">aliados</a></li>
+            <li><a href="#">contactanos</a></li>
         </ul>
     </nav>
 
@@ -105,16 +105,6 @@
                 </div>
             </article>
         </section>
-
-        <!------- SECTION DEL PRÁCTICA FLEXBOX ------->
-        <section class="contenedorFlex">
-            <div class="flex-hijo">caja1</div>
-            <div class="flex-hijo">caja2</div>
-            <div class="flex-hijo">caja3</div>
-            <div class="flex-hijo">caja4</div>
-            <div class="flex-hijo">caja4</div>
-        </section>
-    </main>
 
     <!-------------------------- FOOTER (pie de página)-------------------------->
     <footer>
