--- a/actividad2/index.html
+++ b/actividad2/index.html
@@ -65,7 +65,7 @@
             <article class="contenedorImagenes">
                 <div class="imagenes img1">
                     <img src="./assets/img1.png" alt="img-proyecto">
-                    <div>
+                    <div class="parrafo-img">
                         <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quod corporis magni optio ut eaque
                             perferendis, numquam porro quidem nemo, rerum a labore velit veritatis tempore provident
                             voluptate doloribus voluptatibus impedit!</p>
@@ -73,7 +73,7 @@
                 </div>
                 <div class="imagenes img2">
                     <img src="./assets/img2.png" alt="img-proyecto">
-                    <div>
+                    <div class="parrafo-img">
                         <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quod corporis magni optio ut eaque
                             perferendis, numquam porro quidem nemo, rerum a labore velit veritatis tempore provident
                             voluptate doloribus voluptatibus impedit!</p>
@@ -81,7 +81,7 @@
                 </div>
                 <div class="imagenes img3">
                     <img src="./assets/img3.png" alt="img-proyecto">
-                    <div>
+                    <div class="parrafo-img"  >
                         <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quod corporis magni optio ut eaque
                             perferendis, numquam porro quidem nemo, rerum a labore velit veritatis tempore provident
                             voluptate doloribus voluptatibus impedit!</p>
@@ -89,7 +89,7 @@
                 </div>
                 <div class="imagenes img4">
                     <img src="./assets/img4.png" alt="img-proyecto">
-                    <div>
+                    <div class="parrafo-img">
                         <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quod corporis magni optio ut eaque
                             perferendis, numquam porro quidem nemo, rerum a labore velit veritatis tempore provident
                             voluptate doloribus voluptatibus impedit!</p>
@@ -97,7 +97,7 @@
                 </div>
                 <div class="imagenes img5">
                     <img src="./assets/img7.png" alt="img-proyecto">
-                    <div>
+                    <div class="parrafo-img">
                         <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quod corporis magni optio ut eaque
                             perferendis, numquam porro quidem nemo, rerum a labore velit veritatis tempore provident
                             voluptate doloribus voluptatibus impedit!</p>
@@ -105,7 +105,7 @@
                 </div>
             </article>
         </section>
-
+    </main>    
     <!-------------------------- FOOTER (pie de página)-------------------------->
     <footer>
         <!-- CARACTERISTICA DE DESARROLLO -->
