--- a/practica1/index.html
+++ b/practica1/index.html
@@ -33,13 +33,13 @@
         <!---------------- MENÚ NAVEGACIÓN ----------------->
         <nav class="menuNav">
             <!-- LOGO -->
-            <div class="logo">
+            <div class="contenedorLogo">
                 <a href="./index.html">
                     <img src="./assets/logo/logo.webp" alt="logo">
                     <p>cafe racer <span class="span-logo">bikes</span> </p>
                 </a>
             </div>
-            
+
             <!-- lista menú de navegación -->
             <ul class="listaMenu">
                 <li>grid</li>
@@ -62,43 +62,43 @@
                 <div class="imagenes img1">
                     <img src="./assets/img1.jpg" alt="img-cafe-racer">
                     <div class="textoImg">
-                        <p>motos cafe racer</p>
+                        <p>“La vida es como un paseo en moto, todo depende de tu forma de conducir”</p>
                     </div>
                 </div>
                 <div class="imagenes img2">
                     <img src="./assets/img2.jpeg" alt="img-cafe-racer">
                     <div class="textoImg">
-                        <p>motos cafe racer</p>
+                        <p>“Quizás estás a solo un paseo en moto de estar de buen humor”</p>
                     </div>
                 </div>
                 <div class="imagenes img3">
                     <img src="./assets/img3.webp" alt="img-cafe-racer">
                     <div class="textoImg">
-                        <p>motos cafe racer</p>
+                        <p>“Busqué mi libertad en todas partes y solo la encontré sobre mi motocicleta”</p>
                     </div>
                 </div>
                 <div class="imagenes img4">
                     <img src="./assets/img4.jpg" alt="img-cafe-racer">
                     <div class="textoImg">
-                        <p>motos cafe racer</p>
+                        <p>“El buen motero conoce la gran diferencia entre saber el camino y respetar el camino”</p>
                     </div>
                 </div>
                 <div class="imagenes img5">
                     <img src="./assets/img5.jpg" alt="img-cafe-racer">
                     <div class="textoImg">
-                        <p>motos cafe racer</p>
+                        <p>“Una moto y buena compañía, es la felicidad de cada día”</p>
                     </div>
                 </div>
                 <div class="imagenes img6">
                     <img src="./assets/img7.webp" alt="img-cafe-racer">
                     <div class="textoImg">
-                        <p>motos cafe racer</p>
+                        <p>“La moto, es ese órgano que está fuera de mi cuerpo, que necesito para vivir”</p>
                     </div>
                 </div>
                 <div class="imagenes img7">
                     <img src="./assets/img8.webp" alt="img-cafe-racer">
                     <div class="textoImg">
-                        <p>motos cafe racer</p>
+                        <p>“Cuando se tiene una moto, solo lamentamos los paseos que no dimos”</p>
                     </div>
                 </div>
             </article>
@@ -117,12 +117,25 @@
                         aligeramiento general de la máquina, quitando todo aquello que no fuera necesario y poniendo
                         especial énfasis en la velocidad y agilidad, dejando la comodidad de sus monturas en un segundo
                         plano.
+
+                        Por supuesto tenían sus lugares de reunión como los míticos bares Ace Cafe, The Busy Bee,
+                        Johnson’s Cafe Donde charlaban sobre las carreras de la Isla de Man y las modificaciones que
+                        realizaban a sus motos. Allí además se encontraban auténticas chicas pin-up... y para
+                        impresionarlas que mejor que ver qué piloto es el más rápido o quién tiene la mejor moto
+
+                        Es en las carreras entre los distintos bares donde nace el auténtico café race. Los pilotos no
+                        sólo probaban su habilidad, sino también sus creaciones, ya que las motos cafe racer eran
+                        totalmente customizadas. Ni que decir tiene que las condiciones de seguridad eran mínimas...
+
+                        No obstante no estaban solos. También existían los Mods. Estos últimos destacaban por sus
+                        abrigos verdes, jersey de pico y sus scooters Vespas o Lambretta, repletas de retrovisores y
+                        faros. Y a veces los encuentros acababan a golpes.
                     </p>
                 </div>
             </article>
         </section>
     </main>
-    <!--------------------------------------- MAIN --------------------------------------->
+    <!--------------------------------------- FOOTER --------------------------------------->
     <footer>
         <!-- CARACTERISTICA DE DESARROLLO -->
         <p>&copy; Robinson Ariza 2024</p>
