--- a/actividad4/index.html
+++ b/actividad4/index.html
@@ -12,6 +12,9 @@
     <!-- links iconos bootstrap -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
 
+    <!-- MIS ESTILOS DEBEN IR SIEMPRE DESPUÉS DE LOS ESTILOS DE BOOTSTRAP -->
+    <link rel="stylesheet" href="./styles/index.css">
+
     <title>E-commerce</title>
 </head>
 <body>
