[FINISH] ejercicio2 js

--- a/javascript/actividad6/index.html
+++ b/javascript/actividad6/index.html
@@ -7,16 +7,15 @@
 
 
     <!-- Vinculación scripts -->
-    <!-- defer-> ayuda a que cargue primero el archivo html y despues el archivo js -->
-    <script src="./scripts/ejercicio1.js" defer></script>
-
+    <!-- defer-> ayuda a que cargue el archivo al final del archivo html -->
+    <!-- <script src="./scripts/ejercicio1.js" defer></script> -->
+    <script src="./index.html" defer></script>
 
     <title>Práctica Java Script</title>
 </head>
 
 <body>
     <h1>Práctica JS</h1>
-
     <!-- Scripts antes del cierre de body -->
 </body>
 
