[FINISH] ejercicio3 js

--- a/javascript/actividad6/index.html
+++ b/javascript/actividad6/index.html
@@ -9,7 +9,8 @@
     <!-- Vinculación scripts -->
     <!-- defer-> ayuda a que cargue el archivo al final del archivo html -->
     <!-- <script src="./scripts/ejercicio1.js" defer></script> -->
-    <script src="./index.html" defer></script>
+    <!-- <script src="./index.html" defer></script> -->
+    <script src="./scripts/ejercicio3.js" async></script>
 
     <title>Práctica Java Script</title>
 </head>
